--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>dpaleino/gmtkbabel @ GitHub</title>
-	
+	<title>gmtkbabel</title>
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
@@ -30,14 +27,10 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
-	
 </head>
-
 <body>
   <a href="http://github.com/dpaleino/gmtkbabel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
   <div id="container">
-
     <div class="download">
       <a href="http://github.com/dpaleino/gmtkbabel/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
@@ -45,31 +38,63 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/dpaleino/gmtkbabel">gmtkbabel</a>
-      <span class="small">by <a href="http://github.com/dpaleino">dpaleino</a></span></h1>
+    <h1><a href="http://github.com/dpaleino/gmtkbabel">gmtkbabel</a></h1>
 
     <div class="description">
-      GUI for mtkbabel
+      Zenity GUI for <a href="http://www.rigacci.org/wiki/doku.php/doc/appunti/hardware/gps_logger_i_blue_747">mtkbabel</a>
     </div>
 
-    <h2>Dependencies</h2>
-<p>bash
-zenity
-mtkbabel</p>
-<h2>License</h2>
-<p>BSD-3</p>
-<h2>Authors</h2>
-<p>David Paleino (d.paleino@gmail.com)<br/>Elena Grandi</p>
-<h2>Contact</h2>
-<p>David Paleino (d.paleino@gmail.com)<br/>      </p>
+    <h2>Description</h2>
+    <p><b>gmtkbabel<b> consists of a set of shell scripts that, using
+    <b>zenity</b>, provide a graphical interface to the command-line
+    program <b>mtkbabel</b>.</p>
+    <p>Therefore, it needs:</p>
+    <ul>
+      <li>bash</li>
+      <li>zenity</li>
+      <li>mtkbabel</li>
+    </ul>
 
+    <h2>License</h2>
+    Redistribution and use in source and binary forms, with or without
+    modification, are permitted provided that the following conditions are met:
+
+    * Redistributions of source code must retain the above copyright
+      notice, this list of conditions and the following disclaimer.
+    * Redistributions in binary form must reproduce the above copyright
+      notice, this list of conditions and the following disclaimer in the
+      documentation and/or other materials provided with the distribution.
+    * Neither the name of the <organization> nor the
+      names of its contributors may be used to endorse or promote products
+      derived from this software without specific prior written permission.
+
+    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+    DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
+    DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+
+    <h2>Authors</h2>
+    <p>David Paleino (d.paleino@gmail.com)
+    <br/>Elena Grandi</p>
+
+    <h2>Contact</h2>
+    <p>David Paleino (d.paleino@gmail.com)</p>
 
     <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/dpaleino/gmtkbabel/zipball/master">zip</a> or
-      <a href="http://github.com/dpaleino/gmtkbabel/tarball/master">tar</a> formats.
-    </p>
+    <ul>
+      <li> <b>master</b> (development)
+      <small><a href="http://github.com/dpaleino/gmtkbabel/zipball/master">zip</a> |
+      <a href="http://github.com/dpaleino/gmtkbabel/tarball/master">tar</a></small></li>
+      <li> <b>latest released</b>
+      <small><a href="http://github.com/dpaleino/gmtkbabel/zipball/latest">zip</a> |
+      <a href="http://github.com/dpaleino/gmtkbabel/tarball/latest">tar</a></small></li>
+    </ul>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/dpaleino/gmtkbabel</pre>
@@ -78,9 +103,6 @@ mtkbabel</p>
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/dpaleino/gmtkbabel">dpaleino/gmtkbabel</a>
     </div>
-
   </div>
-
-  
 </body>
 </html>
