Update index once more

--- a/index.html
+++ b/index.html
@@ -2,31 +2,9 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>gmtkbabel</title>
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #51230f;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #aedcf0; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #aedcf0; }
-    h3 { text-align: center; color: #aedcf0; }
-    a { color: #aedcf0; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>gmtkbabel</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <a href="http://github.com/dpaleino/gmtkbabel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
@@ -56,6 +34,7 @@
     </ul>
 
     <h2>License</h2>
+    <pre>
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are met:
 
@@ -78,7 +57,7 @@
     ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
     (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
     SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
-
+    </pre>
     <h2>Authors</h2>
     <p>David Paleino (d.paleino@gmail.com)
     <br/>Elena Grandi</p>
@@ -97,7 +76,9 @@
     </ul>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/dpaleino/gmtkbabel</pre>
+      <blockquote>
+        <pre>$ git clone git://github.com/dpaleino/gmtkbabel</pre>
+      </blockquote>
     </p>
 
     <div class="footer">
