--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
     (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
     SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
     </pre>
+
     <h2>Authors</h2>
     <p>David Paleino (d.paleino@gmail.com)
     <br/>Elena Grandi</p>
 
     <h2>Contact</h2>
     <p>David Paleino (d.paleino@gmail.com)</p>
+    <p>For bugs, please use <a href="http://github.com/dpaleino/gmtkbabel/issues">GitHub issues</a>.</p>
 
     <h2>Download</h2>
     <ul>
