Removed e-mail addresses

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     </pre>
 
     <h2>Authors</h2>
-    <p>David Paleino (d.paleino@gmail.com)
+    <p>David Paleino
     <br/>Elena Grandi</p>
 
     <h2>Contact</h2>
-    <p>David Paleino (d.paleino@gmail.com)</p>
-    <p>For bugs, please use <a href="http://github.com/dpaleino/gmtkbabel/issues">GitHub issues</a>.</p>
+    <p>For bugs, requests and whatsoever, please use
+    <a href="http://github.com/dpaleino/gmtkbabel/issues">GitHub issues</a>.</p>
 
     <h2>Download</h2>
     <ul>
