Drop requirement on bash

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     program <b>mtkbabel</b>.</p>
     <p>Therefore, it needs:</p>
     <ul>
-      <li>bash</li>
+      <li>a POSIX-compliant shell</li>
       <li>zenity</li>
       <li>mtkbabel</li>
     </ul>
