Add "Packages" section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/dpaleino/gmtkbabel">dpaleino/gmtkbabel</a>
     </div>
+
+    <h2>Packages</h2>
+    <p>gmtkbabel has been packaged for various free software distributions:</p>
+    <ul>
+      <li>ArchLinux: <a href="http://aur.archlinux.org/packages.php?ID=40301&detail=1">PKGBUILD</a></li>
+      <li>Debian: gmtkbabel (<a href="http://ftp-master.debian.org/new/gmtkbabel_0.1-1.html">NEW queue</a>)</li>
+      <li>Ubuntu: should be kept in sync from Debian</li>
+      <li>Has it been packaged for another distribution? Please let me know!</li>
+    </ul>
   </div>
 </body>
 </html>
